# AudioMoth-MSD_Control-Settings

./: .gitignore  CMakeLists.txt  README.md  build.sh  upload.jlink  usb.cmake
doc/: EFM32.md
fatfs/: CMakeLists.txt
inc/: audioMoth.h  microsdconfig.h  msddmedia.h  pinouts.h  pinouts_EFM32WG380.h  pinouts_EFM32WG990.h  usbconfig.h  usbdescriptors.h
src/: audioMoth.c  main.c  msddmedia.c  pinouts.c
